# LightCoder

./: .gitignore  Dockerfile  README.md  README_LOCAL.md  lightcoder.sh  lightcoder_harbor_agent.py  local_env.sh  pyproject.toml  test_api.py  题目三_Long-Running编码智能体系统.md
docs/: README.md  coding-agent-state-machine.md  coding-agent-state-schema.md  implementation-status.md  lightscientist-usage.md  usage.md  webui-quickstart.md
docs/architecture/: context-memory.md  overview.md  state-machine.md  state-schema.md  tools-skills.md
docs/evaluation/: managed-evaluation.md  runbook.md  swe-marathon.md
skills/: README.md  coding_agent_state_machines_loop_cn.docx  manifest.json
skills/accept-candidate/: SKILL.md
skills/accept-transformation-step/: SKILL.md
skills/apply-transformation-step/: SKILL.md
skills/capture-behavior-baseline/: SKILL.md
skills/capture-build-compatibility-baseline/: SKILL.md
skills/check-feature-completion/: SKILL.md
skills/check-global-completion/: SKILL.md
skills/check-optimization-stop/: SKILL.md
skills/check-project-completion/: SKILL.md
skills/check-repair-completion/: SKILL.md
skills/check-transform-completion/: SKILL.md
skills/checkpoint-project-state/: SKILL.md
skills/diagnose-and-replan/: SKILL.md
skills/diagnose-and-retry/: SKILL.md
skills/diagnose-feature-gap/: SKILL.md
skills/end/: SKILL.md
skills/execute-subgoal/: SKILL.md
skills/execute-work-item/: SKILL.md
skills/feature-complete/: SKILL.md
tests/: conftest.py  test_agent.py  test_coding_skill_package.py  test_controller.py  test_evaluation.py  test_model.py  test_models_store.py  test_skills_cli.py  test_tools_context.py
tools/: __init__.py  build_coding_agent_skills.py
(+126 files in other folders)
